changed the color of dive deeper

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     color: #1f1f1f;
   }
   #container h1 span {
-    color: #0fb18b;
+    color: #00c698;
   }
   #container p {
     color: #6c6767;
