--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <h1 id="texthead"><span>Dive deeper </span>into what you read.</h1>
       <p id="textpara">
         Reading a detailed article leaves you with an ocean of terms you don't
-        know enough about. Alta dive is a web app that uses Natural Language
-        Processing to look for unexplored ideas and topics in the articles you
-        read and gives you intelligent recommendations on articles to read next,
-        thereby enriching your reading experience.
+        know enough about.
+        <br /><br />
+        Alta dive is a web app that uses Natural Language Processing to look for
+        unexplored ideas and topics in the articles you read and gives you
+        intelligent recommendations on articles to read next, thereby enriching
+        your reading experience.
       </p>
       <form>
         <h4 id="sign">Sign up for early access!</h4>
@@ -35,7 +37,7 @@
       <a href="">Learn more ></a> -->
     </div>
 
-    <img src="mgainmj.png" id="bigimage" class="image" />
+    <img src="2mgainmj.png" id="bigimage" class="image" />
   </div>
   <footer id="footper">
     <br />
@@ -97,9 +99,9 @@
     font-size: 1rem;
   }
   #sign {
-    margin-top: 50px;
+    margin-top: 5%;
+    margin-bottom: 1%;
     font-weight: 600;
-    margin-bottom: 25px;
     color: #181818;
     font-size: 1rem;
   }
