--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         your reading experience.
       </p>
       <form>
-        <h4 id="sign">Sign up for early access!</h4>
+        <h4 id="sign">Sign up for early access</h4>
         <input
           type="email"
           name="email"
