the site is responsive now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet"
   />
   <link rel="icon" href="logokaicon.png" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <img src="logo.png" id="logyaar" />
@@ -18,10 +19,10 @@
         Reading a detailed article leaves you with an ocean of terms you don't
         know enough about.
         <br /><br />
-        Alta dive is a web app that uses Natural Language Processing to look for
-        unexplored ideas and topics in the articles you read and gives you
-        intelligent recommendations on articles to read next, thereby enriching
-        your reading experience.
+        <b>Altadive</b> is a web app that uses Natural Language Processing to
+        look for unexplored ideas and topics in the articles you read and gives
+        you intelligent recommendations on articles to read next, thereby
+        enriching your reading experience.
       </p>
       <form>
         <h4 id="sign">Sign up for early access!</h4>
@@ -45,85 +46,4 @@
     <h3>@altadive 2021</h3>
   </footer>
 </body>
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    font-family: "Poppins", sans-serif;
-  }
-  #logyaar {
-    margin: 5%;
-    width: 200px;
-  }
-  .main {
-    display: flex;
-    margin: auto;
-    width: 90%;
-    align-items: center;
-  }
-  #container {
-    width: 40%;
-    margin-right: 10%;
-  }
-  #container h1 {
-    margin-bottom: 5%;
-    color: #1f1f1f;
-  }
-  #container h1 span {
-    color: #00c698;
-  }
-  #container p {
-    color: #6c6767;
-  }
-  #container button {
-    padding: 10px;
-    margin: 0;
-    width: 20%;
-    margin-top: 5%;
-    background: #00c698;
-    color: white;
-    font-family: "Poppins";
-    border: none;
-    cursor: pointer;
-  }
-  #container a {
-    margin-left: 3%;
-    text-decoration: none;
-    color: #00c698;
-  }
-  footer {
-  }
-  footer h3 {
-    font-size: 1rem;
-  }
-  #sign {
-    margin-top: 5%;
-    margin-bottom: 1%;
-    font-weight: 600;
-    color: #181818;
-    font-size: 1rem;
-  }
-  input {
-    outline: none;
-    font-family: "poppins";
-    border: none;
-    padding-bottom: 8px;
-    border-bottom: 3px solid #00c698;
-    width: 40%;
-  }
-  .image {
-    width: 50%;
-  }
-  footer {
-    padding-left: 5%;
-
-    padding-right: 5%;
-    padding-bottom: 2%;
-    position: absolute;
-    bottom: 0;
-    width: 90%;
-    color: #00c698;
-  }
-</style>
+<style></style>
